--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://unihub.github.io/auto-posting",
+  "homepage": "http://Areej101.github.io/posting",
   "name": "auto-posting",
   "version": "0.1.0",
   "private": true,
